# python-basic-ci-structure

./: README.md  list_string_conversions.py  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/conversions/: list_string_conversions.py
tests/: test_conversions.py
