[metadata]
name = conversions
description = perform simple conversions
author = Scott Williams
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: only
    Programming Language :: Python :: 3.10

[options]
packages = 
    conversions
# requests isn't actually required; just an example
install_requires = 
    requests>=2
python_requires = >=3.10
package_dir = 
      =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
conversions = py.typed

[flake8]
max-line-length = 160
